A few easy fixes for high contrast modes

--- a/src/assets/sass/modules/_buttons.scss
+++ b/src/assets/sass/modules/_buttons.scss
@@ -60,7 +60,7 @@ input[type="button"],
 
     &:focus {
         border-color: $color-link-focus;
-        outline: 0;
+        outline: 2px solid transparent;
     }
 }
 
