--- a/src/assets/sass/modules/_embedded-content.scss
+++ b/src/assets/sass/modules/_embedded-content.scss
@@ -124,7 +124,7 @@ svg:not(:root) {
 
 .img-preview {
     &:focus {
-        outline: 0;
+        outline: 2px solid transparent;
     }
 
     img {
