--- a/src/assets/sass/modules/_forms.scss
+++ b/src/assets/sass/modules/_forms.scss
@@ -123,7 +123,7 @@ textarea {
 
     &:focus {
         border-color: $color-link-focus;
-        outline: 0;
+        outline: 2px solid transparent;
     }
 }
 
