--- a/src/assets/sass/modules/_layout-specific.scss
+++ b/src/assets/sass/modules/_layout-specific.scss
@@ -94,7 +94,7 @@
 
         &:focus {
             border-color: $color-link-focus;
-            outline: none;
+            outline: 0;
         }
     }
 
