--- a/src/assets/sass/modules/_links.scss
+++ b/src/assets/sass/modules/_links.scss
@@ -19,7 +19,6 @@ a {
 
     &:hover,
     &:active {
-        outline: 0;
         color: $color-link-hover;
         text-decoration: underline;
     }
@@ -52,7 +51,7 @@ a {
 
     &:focus {
         border-color: $color-link-focus;
-        outline: 0;
+        outline: 2px solid transparent;
     }
 }
 
