--- a/src/assets/sass/modules/_navigation.scss
+++ b/src/assets/sass/modules/_navigation.scss
@@ -65,7 +65,7 @@
 
         &:focus {
             border-color: $color-link-focus;
-            outline: none;
+            outline: 0;
         }
     }
 
